<resources>
    <string name="app_name">MyRupees</string>
    <string name="delete">Delete</string>
    <string name="recent_transaction">Recent Transaction</string>
    <string name="export">Export Transaction</string>
    <string name="save">Save</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="amount">Amount</string>
    <string name="title">Title</string>
    <string name="hey_there">HEY THERE,</string>
    <string name="let_s_turn_your_cents">Let’s turn your cents into sense\ntrack smarter with MyRupees</string>
    <string name="welcome_back_chief">Welcome Back Chief!!</string>
    <string name="get_started">Get Started</string>
    <string name="available_balance">Available Balance</string>
    <string name="update_balance">Update Balance</string>
    <string name="budget">Budget Header</string>
    <string name="set_your_monthly_budget">Set Your Monthly Budget</string>
    <string name="enter_budget_amount">Enter budget amount</string>
    <string name="_0_00">0.00</string>
    <string name="save_budget">Save Budget</string>
    <string name="enter_title">Enter title</string>
    <string name="enter_amount">Enter amount</string>
    <string name="start_date_yyyy_mm_dd">Start Date (yyyy-MM-dd)</string>
    <string name="e_g_2025_04_21">e.g. 2025-04-21</string>
    <string name="number_of_months">Number of Months</string>
    <string name="e_g_6">e.g. 6</string>
    <string name="add_recurring_transaction">Add Recurring Transaction</string>
    <string name="upcoming_recurring_transactions">Upcoming Recurring Transactions</string>
    <string name="recent_paid_transactions">Recent Paid Transactions</string>
    <string name="current_budget_rs_0">Current Budget: Rs 0</string>
    <string name="total_expenses_rs_0">Total Expenses: Rs 0</string>
    <string name="_0_spent">0% Spent</string>
    <string name="Edit">Edit</string>
    <string name="edit">Edit</string>
    <string name="enter_your_feedback_here">Enter your feedback here...</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_example_com">user@example.com</string>
    <string name="user_name">User Name</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms And Conditions</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="thuvecodes">©2025 thuve-codes. All Rights Reserved.</string>
</resources>