<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/material_dynamic_neutral10">

    <ImageView
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/mylogo" />

    <EditText
        android:id="@+id/entersid"
        android:layout_width="233dp"
        android:layout_height="41dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:hint="@string/user_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/enterpassword"
        android:inputType="textPassword"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/enter_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="                                          "
        android:textColor="#FF0000"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/button_gradient"
        />


    <Button
        android:id="@+id/regbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#00423750"
        android:textAllCaps="false"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/don_t_have_an_account_register"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:text="@string/thuvecodes"
        android:layout_marginTop="298dp"
        android:textColor="@color/white"
        android:textSize="10dp" />
</LinearLayout>